Fix spacing on 'T' 'A' and 'S' in student card

--- a/app/assets/stylesheets/components/_course_cards.scss
+++ b/app/assets/stylesheets/components/_course_cards.scss
@@ -155,7 +155,7 @@
   height: 14px;
   border-radius: 50%;
   display:flex;
-  align-items: bottom;
+  align-items: center;
   justify-content: center;
 }
 
